# Traceback

./: .gitignore  API_USAGE.md  RAGAS_FIXES.md  README.md  TASK5_RAGAS_EVALUATION.md  capture_interface.html  certification-challenge.md  certification_challenge_documentation.md  demo.py  launch_traceback.py  pyproject.toml
data/: golden_test_data.json  lineage.json  processed_data.json  ragas_evaluation_results.json
data/docs/: compliance_monitoring_spec.md  customer_analytics_spec.md  data_quality_standards.md  escalation_procedures.md  financial_reporting_spec.md  hr_analytics_spec.md  incident_playbook.md  inventory_management_spec.md  marketing_attribution_spec.md  product_analytics_spec.md  risk_management_spec.md  sales_orders_spec.md  sla_definitions.md  supply_chain_spec.md  troubleshooting_guide.md
data/repo/: compliance_monitoring_pipeline.sql  customer_analytics_pipeline.sql  data_quality_monitoring_pipeline.sql  escalation_monitoring_pipeline.sql  financial_reporting_pipeline.sql  hr_analytics_pipeline.sql  incident_response_pipeline.sql  inventory_management_pipeline.sql  marketing_attribution_pipeline.sql  product_analytics_pipeline.sql  revenue_summary_pipeline.sql  risk_management_pipeline.sql  sales_orders_pipeline.sql  sla_monitoring_pipeline.sql  supply_chain_pipeline.sql
notebooks/: 01_end_to_end_rag.ipynb  02_ragas_evaluation.ipynb  03_advanced_retrieval.ipynb  04_advanced_retrieval_evaluation.ipynb
notebooks/backup/: 05_ragas_evaluation.ipynb  05_ragas_evaluation_backup.ipynb  06_advanced_retrieval.ipynb  (+2 more)
web_ui/: DOCUMENTATION.md  README.md  index.html  server.py
(+6 files in other folders)
